prevent viewport bleeding

--- a/whackamole/style.css
+++ b/whackamole/style.css
@@ -1,12 +1,18 @@
 body {
 	text-align: center;
+	border: 1px dotted black;
+}
+
+#container{
+	width: 0px;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 #main {
 	border: 1px solid black;
-	margin-left: auto;
-	margin-right: auto;
-	width: 0px;
+	width: 95%;
+	height: 95%;
 	padding: 10px;
 	display: flex;
 	cursor: crosshair;
